# sigil

./: Cargo.toml  LICENSE  README.md
data/: magic_numbers_reference.json
src/: file_manager.rs  lib.rs  main.rs  trie.rs
