[package]
name = "sigil"
version = "0.1.0"
edition = "2024"

[dependencies]
# Library to deal with CLI arguments
clap = { version = "4.0", features = ["derive"] }

# Required for deserializing your JSON file
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"

# Coling the text
colored = "2.0"

# Recursively find the folders
walkdir = "2"

[[bin]]
name = "sigil"
path = "src/main.rs"
